# masi-qa

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
CODE/: app_montage.py
CODE/templates/: montage.html  root.html
src/masi_qa/: __init__.py  __main__.py  app_montage.py
src/masi_qa/templates/: bids_errors.html  mode_mismatch.html  montage.html  permission_error.html  root.html  status_mismatch.html
tests/: conftest.py  test_permissions.py  test_routes.py  test_utils.py
