[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masi-qa"
version = "0.1.0"
description = "Flask-based QA tool for reviewing and annotating medical images."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Michael Kim", email = "michael.kim@vanderbilt.edu" },
  { name = "Yihao Liu", email = "yihao.liu@vanderbilt.edu" }
]
dependencies = [
  "flask==2.2.2",
  "numpy<2.0",
  "pandas==2.0.3",
  "tqdm",
  "Werkzeug==2.2.2"
]

[project.scripts]
masi-qa = "masi_qa.app_montage:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
masi_qa = ["templates/**"]
