[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masi-qa"
version = "0.1.0"
description = "Flask-based QA tool for reviewing and annotating medical images."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Michael Kim", email = "michael.kim@vanderbilt.edu" },
  { name = "Yihao Liu", email = "yihao.liu@vanderbilt.edu" }
]
dynamic = ["dependencies"]

[project.scripts]
masi-qa = "masi_qa.app_montage:main"
masi-bids-qa = "masi_qa.app_montage:main_bids"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
masi_qa = ["templates/**"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:werkzeug",
    "ignore::DeprecationWarning:ast",
]
